@@ -3,17 +3,17 @@ Hash: SHA256
 
 AUX lfm-2.3-no-doc.patch 418 SHA256 f4aef9c57938c953e7e0798d3207920c86e6cb84ffec2a82ccd29da7801e4e8e SHA512 d914da807c56a8ba38a9c9c2d6ac8c1ab5a9ec935cc55fd0a8ca5d12ecda571fd64a41938942586c9cc0e80a53a8d83cecc347decc66ebec719f78ce9a0b0d3b WHIRLPOOL 964bd6dc6491c545948f3ca5a9e588cfc37af6bffaa394ade6f8bc3d22da7bd356f84e937520decf557c12b5f20c4abb610aba5527f4d3d15a28c2d85638ff61
 DIST lfm-2.3.tar.gz 119120 SHA256 e8df188c17d4d676cf41ccae9f6bf82aa0c5ff3942d5aad985990ad1446c9504 SHA512 d244cd03ebf4b145c0d364d9d7038a2b640010e7e6bc413a3613d4519afac4856ee7694a962176d7693bef6503b80703685b1cefab1eda0f8d0768ae10abf6c7 WHIRLPOOL 559bfd2bda0438709f53a7c22f285aeb932e6929b7c0e16af2684088c65f21a068440e5888e772a0b67bd45c2541a2441a5a22ab13011aa8eb97dd7bd5fc591f
-EBUILD lfm-2.3.ebuild 662 SHA256 d334c9ae041e10ecee67cec6bdcd6fd0cbadc766b2a0922c114a20bf734c2aa8 SHA512 5978e8e54e6296011018461f96dce24b01b59a633b1e9a6960f733a996f6b414f2f98213505b3364096e72d7250d7db4e853e96466f1de0d99ab5c3f24c0b2c1 WHIRLPOOL 49b8315b0cec8269bcf47d79fae7075e756031d4b8d30d3b7ca913d5459ba6bba84c5ff287c4a2a94f5e0530c9d5d3afcf5e988aeb799114ddf43865a62a67d3
-MISC ChangeLog 480 SHA256 85e39a03fc2d8114bb55ccbdaa494dbe18d6735ed48e65b4f16c81e950ff0558 SHA512 121fd8995734579c085bd58b623be05754c64b581bd80a55b6514ed588002d3e779806ac1fb3a0a5fba2f8bad341a891cca916b5f9414b189571f2f75cc20a9d WHIRLPOOL e372ec88069cf2e20694d22d315a5563c1a84076a77a40e32554204f8abc79796cc4531398ab7acde4c966bcd3f769e38f8ec8073ecb261e6946593aca9a43a9
+EBUILD lfm-2.3.ebuild 626 SHA256 2b7da171f118953fdae84897c31e89f41f26ff5632a74bd3da66dc8d0f83ef09 SHA512 0437657c62a6296ea448bd47ae083012965e934085129f1de551d7574970ae7527b1fdbaacb00e2b1be23c7861ee19ae106c8568156de24f2c5da03a4158bbdc WHIRLPOOL 18d4e1fbeaf12906338080f004512973215fa762eda8affc5cdc8d77675837df3e4da270d4dbbb44e8a6932808264a2dc854ac65bb93cda53049e373e29774cf
+MISC ChangeLog 569 SHA256 831b807774c3cf0d4f839d06a154243445cb8e6828a30786ab3d6b821aaf5f4f SHA512 a1c860a5fa814dfb9d39156c124c6db95bb3db2b9450334fa84e48e6bac8471bc409744f2301ba7087206af3561d8c715a09dc02ebd2f95bf267f99fb38218e4 WHIRLPOOL d87fcf27b8d8808353eb583722b1ab689b90d329eedd08e5ca9495c3a4b97ba84ad7e60e5c2e61811b70f7120b1795f558d292471e100422d28fa60041f4000e
 MISC metadata.xml 236 SHA256 5285fd5ca6bc85e0392ff64ec8e54d0018ebd761d3977869c00c93dee45ea09d SHA512 a1abf9a60fb1a2078d0475df655f8abd4b2f877f8d232028232fafca2eb7e7ae6ec2c835c4fe0ef27b3b5655d746d1fe53bbcb353703819448ddec84acdd4215 WHIRLPOOL fdbf5fcd34aa17330575f013aef4c87a8b039b62b6de3337a4004a6a0217238ceca43fa15425c30ddb7a5a632de7eb138ed541dfb161614cba817527297781e2
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRTWmZAAoJEEqz6FtPBkyjH4MIALat9BgdPKJrlkQydqBKycUc
-/ZxjHb4v7NIiE6cBj8nmP0Xh48J8q3HnJK8qHv36oYpNjvG17efZdIqw77W4RT0z
-AEObTJYBPhCDhJPDqwWV/Jhben3R+EtKgHAAQOh9NaMfZ7E2Vm11/YmZVCWrASR8
-8sTJly5M8LxPSSSZw2CmdyeO1rDeVPZA6C0Elv2mWaPCRzlJDGeME/M6XcsAb7I1
-Ow8n9Kdmc8xX90gjsaoxNuxSVIMrfWP/cT6uEO1TJQFfzgT4Qs43j/9jRezHM9uO
-vfsP0wVlF25ZjLqIvBoz25okYTMhvd8xVeLIZMT9SYItYrEo6vYSSm5++f8B95Q=
-=ej19
+iQEcBAEBCAAGBQJRqVgsAAoJEEqz6FtPBkyjiQgH/jrGul45tAXm2morD0XTMYcO
+liJH/LftKD8F0f9zePZw5W674BmKFEJwQjXhW+CPrgoPds0aASqve86sGhgomTHM
+SwBDuixXMGroiewCAMfzMQ7NaDPwDQ/w2dSbHq1V9KhHlp6PpUsICkFjYtsNzn8k
+cXRop5mbIq9wrFJPOQLPAqnATnt1RNhjtuA44UB2c1lLLqciXsamEtSNLXYCCc2t
+OSq9BHLVACa7veU2WUdak0POFjlQTQAZzpOn+N8FMcv4ZP78bK9vhKkubYZkLjh5
+g5R5flwEWvfrmNOiz3+IQnjeP242aFuYoKoice6c3foei090Ergscf8x7rWJztU=
+=bsli
 -----END PGP SIGNATURE-----
