@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/lfm
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/lfm/ChangeLog,v 1.2 2013/03/23 08:36:40 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/lfm/ChangeLog,v 1.3 2013/06/01 02:10:51 radhermit Exp $
+
+  01 Jun 2013; Tim Harder <radhermit@gentoo.org> lfm-2.3.ebuild:
+  Remove old HOMEPAGE.
 
   23 Mar 2013; Tim Harder <radhermit@gentoo.org> lfm-2.3.ebuild:
   Update HOMEPAGE and SRC_URI.
